[0.1.14.3] * fix overflow-clipping * update tailwind.css

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1514,6 +1514,10 @@ blockquote, dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre {
   overflow-x: hidden;
 }
 
+.overflow-y-clip {
+  overflow-y: clip;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
